# EML-Content-Generator

./: .gitignore  README.md
email_builder/: .dockerignore  README.md  pyproject.toml  setup-env.sh
email_builder/content_idea_prompts/: html-prompt.txt  html-template.html
email_builder/email_builder/: cli.py
email_builder/examples/: from_list.txt  relay_hosts.txt  to_list.txt
email_builder/examples/body_samples/: 1.txt  2.txt  3.txt  welcome.txt
email_builder/examples/html_samples/: 1.txt  2.txt  3.txt  newsletter-IOT-nightmares.html  newsletter-password.html  newsletter-patch-management.html  newsletter-phishing.html  newsletter-social.html  newsletter-vpn-myths.html  update.html
